<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="seriesItem"
            type="com.example.crud.series.SeriesItem" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".series.BaseAddEditSeriesItemActivity">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/series_id"
            android:textColor="@color/heading_text_color"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/series_id_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{seriesItem.seriesId}"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/series_name"
            android:textColor="@color/heading_text_color"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/series_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@{seriesItem.title}"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/image_url"
            android:textColor="@color/heading_text_color"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/image_url_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@{seriesItem.imageUrl}"
            android:inputType="textPersonName" />
    </LinearLayout>
</layout>